install vue router fix style on general, index and card Add content in card

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -16,3 +16,13 @@ a {
 img {
     width: 100%;
 }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 5px;
+}
+.col-4 {
+    flex-basis: calc((100% / 12) * 4);
+    
+}
